Sticky footer fixed.

--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -3,7 +3,7 @@
 /* Not required for template or sticky footer method. */
 
 .container {
-    width: auto;
+    width: 100%;
     max-width: 680px;
     padding: 0 15px;
   }
