--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -9,5 +9,9 @@
   }
   
   .footer {
+    position: absolute;
     background-color: #f5f5f5;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
   }
