--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -1,6 +1,13 @@
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
+.jumbotron{
+  background:url('./Assets/Images/PB190257.jpg') top center;
+  background-size:cover;
+  margin-top:1em;
+  padding-top:3em;
+  padding-bottom:3em;
+}
 
 .container {
     width: 100%;
@@ -10,6 +17,14 @@
   
   .footer {
     position: absolute;
+    background-color: #f5f5f5;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+  }
+  @media (max-width: 575.98px) {
+    margin-top:20em;
+    position: relative;
     background-color: #f5f5f5;
     height: 100px;
     width: 100%;
