--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 .jumbotron{
-  background:url('./Assets/Images/PB190257.jpg') top center;
+  background:url('./Assets/Images/PB190257.png') top center;
   background-size:cover;
   margin-top:1em;
   padding-top:3em;
