--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -1,17 +1,29 @@
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
+
 .jumbotron{
-  background:url('./Assets/Images/PB190257.png') top center fixed;
-  background-size:cover;
-  margin-top:1em;
-  padding-top:3em;
-  padding-bottom:3em;
+  margin-top: 50px;
+}
+
+.index {
+  background:url('./Assets/Images/PB190257.png') center fixed;
+  background-size: cover;
+}
+
+.portfolio {
+  background:url('./Assets/Images/Whitwell 2.png') center fixed;
+  background-size: cover;
+}
+
+.contact {
+  background:url('./Assets/Images/Whitwell1.png') center fixed;
+  background-size: cover;
 }
 
 .container {
     width: 100%;
-    max-width: 680px;
+    max-width: 900px;
     padding: 0 15px;
   }
   
