--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -7,7 +7,7 @@
 }
 
 .index {
-  background:url('./Assets/Images/PB190257.png') center fixed;
+  background:url('./Assets/Images/PB190257.webp') center fixed;
   background-size: cover;
 }
 
